test/Fail/UselessPrivatePrivate.agda
{-# OPTIONS --warning=error #-}

module UselessPrivatePrivate where

private
  private
    postulate
      A : Set
